testsuite/tests/templates/dunelike/bad_access_submodule_directly.reference
File "fancy/bad_access_submodule_directly.ml", line 6, characters 9-26:
6 | type t = Fancy__Flourish.t
             ^^^^^^^^^^^^^^^^^
Error: Unbound module "Fancy__Flourish"
